--- a/css/school.css
+++ b/css/school.css
@@ -279,14 +279,14 @@ margin:0 auto;
 .section11{
     background-image: url(https://images01.nicepagecdn.com/a1389d7bc73adea1e1c1fb7e/523bf066bfaa5f34a069463b/little-girl-megaphone-positive-shootcopy.jpg);
     width:100%;
-    height:100vh;
+    min-height:600px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position:50% 50%; 
 }
 .registration-form{
-    width: 400px;
-    border: solid 1px red;
+    width: 450px;
+    padding-top: 90px;
 }
 
 @media screen and (max-width:600px) {
@@ -373,10 +373,50 @@ width:350px;
 }
 }
 
+.form-row-single{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
+}
+.form-row-double{
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 15px;
+}
+.form-row-double .email-wrapper{
+    padding-right: 20px;
+}
+.form-label{
+font-weight: 500;
+text-transform: uppercase;
+}
+.input-field-style{
+    color: #111;
+ background-color: #f2f2f2;
+ border-radius: 5px;
+ border: none;
+ padding: 10px 12px;
+ font-size: 16px;
+ font-family: "Open Sans", sans-serif;
+}
+
+.input-textarea-style{
+ color: #111;
+ background-color: #f2f2f2;
+ border-radius: 5px;
+ border: none;
+ padding: 10px 12px;
+ font-size: 16px;
+ font-family: "Open Sans", sans-serif;
+
+}
 
 
 
-
+.center-container{
+    max-width: 1080px;
+    margin: 0 auto;
+}
       
   
 
