--- a/css/school.css
+++ b/css/school.css
@@ -183,7 +183,13 @@ margin:0 auto;
 }
 .section-button7 button{
     color:black;
-    background-color:#d9b10d
+    background-color:#d9b10d;
+    text-decoration: none;
+    border-radius: 50px;
+    padding: 15px 63px 17px 62px;
+    text-transform: uppercase;
+    font-weight: 700;
+    border:none;
 }
 .section8{
     padding-top: 80px;
@@ -261,6 +267,12 @@ padding-right: 10px;
 .section-button9 button{
     background-color: #d9b10d;
     color: black;
+    text-decoration: none;
+    border-radius: 50px;
+    padding: 15px 63px 17px 62px;
+    text-transform: uppercase;
+    font-weight: 700;
+    border:none;
 }
 .section10{
 width:1080px;
