--- a/css/school.css
+++ b/css/school.css
@@ -79,10 +79,13 @@ margin:0 auto;
        
  }
 .section4 img{
+    
+    
+    
+}
+.imagechild{
     width:100%;
     height:559px;
-    
-    
 }
 .container-card{
     display: flex;
@@ -336,6 +339,9 @@ padding-right:10px;
     padding: 3rem;
     
 }
+.section7{
+    padding:25px;
+}
 
 
 .container8{
@@ -347,7 +353,7 @@ padding-right:10px;
    } 
    .layoutcard2{
     width: 100%;
-    padding:0;
+    padding:10px;
    }
   .img5{
     margin-right: 0;
@@ -365,6 +371,7 @@ padding-right:10px;
 flex-direction: column;
 width:350px;
 }
+
 .container-card{
     flex-direction: column;
 }
@@ -377,7 +384,8 @@ width:350px;
     }
    .container8{
     flex-direction: column;
-   
+   justify-content: center;
+   align-items: center;
     
    } 
    .layout1{
@@ -440,6 +448,9 @@ width:350px;
     }
    .form-row-double{
     flex-direction: column;
+   }
+   .imagechild{
+    height: 325px;
    }
 }
 
