--- a/css/school.css
+++ b/css/school.css
@@ -437,6 +437,8 @@ width:350px;
 .imagescard{
     width:300px;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .imagescard img{
     min-height:100px;
